--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Mod bot for the JJK Server",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "author": "Abdussamad Syed",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
