--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "ms": "^2.1.2"
+    "ms": "^2.1.2",
+    "url-exist": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
