--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Abdussamad Syed",
   "license": "ISC",
   "dependencies": {
+    "capitalize-the-first-letter": "^1.0.8",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
