--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "esm": "^3.2.25",
     "mongoose": "^5.9.25",
     "ms": "^2.1.2",
+    "node-cache": "^5.1.2",
     "pretty-ms": "^7.0.0",
     "url-exist": "^2.0.2"
   },
