--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ms": "^2.1.2",
     "node-cache": "^5.1.2",
     "pretty-ms": "^7.0.0",
+    "twit": "^2.2.11",
     "url-exist": "^2.0.2"
   },
   "devDependencies": {
