--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ."
   },
+  "engines": {
+    "node": ">=12.18.3"
+  },
   "author": "Abdussamad Syed",
   "license": "ISC",
   "dependencies": {
     "change-case": "^4.1.1",
-    "discord.js": "^12.2.0",
+    "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "mongoose": "^5.9.25",
+    "mongoose": "^5.10.1",
     "ms": "^2.1.2",
     "node-cache": "^5.1.2",
     "pretty-ms": "^7.0.0",
