--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
+    "express": "^4.17.1",
     "javascript-time-ago": "^2.0.13",
     "mongoose": "^5.10.1",
     "ms": "^2.1.2",
